--- a/lab3/index.html
+++ b/lab3/index.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bubble Tea Order System</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    
+    <form id="orderForm">
+        <h2>Bubble Tea Order</h2>
+
+        <div class="form-group">
+            <label for="flavor">Select Flavor:</label>
+            <select id="flavor" required>
+                <option value="original">Original</option>
+                <option value="mango">Mango</option>
+                <option value="strawberry">Strawberry</option>
+            </select>
+        </div>
+
+        <div class="form-group">
+            <label for="size">Select Size:</label>
+            <select id="size" required>
+                <option value="small">Small</option>
+                <option value="medium">Medium</option>
+                <option value="large">Large</option>
+            </select>
+        </div>
+
+        <div class="form-group">
+            <label for="toppings">Select Toppings:</label>
+            <select id="toppings" multiple>
+                <option value="boba">Boba</option>
+                <option value="jelly">Jelly</option>
+                <option value="pudding">Pudding</option>
+            </select>
+        </div>
+
+        <button type="submit">Place Order</button>
+    </form>
+    <script src="js/script.js"></script>
+            
 </body>
 </html>
