--- a/lab3/index.html
+++ b/lab3/index.html
@@ -6,10 +6,10 @@
 </head>
 <body>
     <form id="orderForm">
-        <h2>Bubble Tea Order</h2>
+        <h2>Bubble Tea Order Form</h2>
 
         <div class="form-group">
-            <label for="flavor">Select Flavor:</label>
+            <label for="flavor">Choose a flavor:</label>
             <select id="flavor" required>
                 <option value="original">Original</option>
                 <option value="mango">Mango</option>
@@ -18,8 +18,9 @@
         </div>
 
         <div class="form-group">
-            <label for="size">Select Size:</label>
+            <label for="size">Choose a size:</label>
             <select id="size" required>
+                <option value="">--Please choose a size--</option>
                 <option value="small">Small</option>
                 <option value="medium">Medium</option>
                 <option value="large">Large</option>
@@ -27,8 +28,9 @@
         </div>
 
         <div class="form-group">
-            <label for="toppings">Select Toppings:</label>
+            <label for="toppings">Choose toppings:<!-- Hold Ctrl/Cmd to select multiple -->:</label>
             <select id="toppings" multiple>
+                <option value="">--Please choose toppings--</option>
                 <option value="boba">Boba</option>
                 <option value="jelly">Jelly</option>
                 <option value="pudding">Pudding</option>
@@ -36,6 +38,10 @@
         </div>
         <button type="submit">Place Order</button>
     </form>
+        <div id="orderSummary">
+            <h3>Order Summary</h3>
+            <p id="summaryText"></p>
+        </div>
     <script src="js/script.js"></script>
             
 </body>
