--- a/week5/index.html
+++ b/week5/index.html
@@ -3,18 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Shopping List with Event Delegation</title>
     <link rel="stylesheet" href="./css/styles.css">
   </head>
-
   <body>
-      <h1>Shopping List</h1>
-      <div>
-          <input type="text" id="newItem" placeholder="Enter item">
-          <button onclick="addItem()">Add Item</button>
-      </div>
-      <ul class="shopping"></ul>
-  
-      <script src="./js/main.js"></script>
+    <h1>Shopping List</h1>
+    <div>
+        <input type="text" id="newItem" placeholder="Enter item">
+        <button onclick="addItem()">Add Item</button>
+        <button id="updateImage">Click Me!</button>
+        <img id="shoppingCart" alt="Shopping Cart" width="50" height="50">
+    </div>
+    
+    <!-- Color buttons with event delegation -->
+    <div id="colorButtons">
+    </div>
+    
+    <ul class="shopping"></ul>
+
+    <script src="./js/main.js"></script>
   </body>
 </html>
