--- a/lab3/index.html
+++ b/lab3/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bubble Tea Order System</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -36,12 +38,15 @@
                 <option value="pudding">Pudding</option>
             </select>
         </div>
-        <button type="submit">Place Order</button>
+
+        <button id="placeOrderButton" type="submit">Place Order</button>
     </form>
-        <div id="orderSummary">
-            <h3>Order Summary</h3>
-            <p id="summaryText"></p>
-        </div>
+        
+    <div id="orderSummary">
+        <h2>Order Summary</h2>
+        <p id="summaryText">Your order details will appear here.</p>
+    </div>
+
     <script src="js/script.js"></script>
             
 </body>
