--- a/lab3/index.html
+++ b/lab3/index.html
@@ -13,6 +13,7 @@
         <div class="form-group">
             <label for="flavor">Choose a flavor:</label>
             <select id="flavor" required>
+                <option value="">--Please choose a flavor--</option>
                 <option value="original">Original</option>
                 <option value="mango">Mango</option>
                 <option value="strawberry">Strawberry</option>
